# legged_control_ros

./: README.md
legged_controllers/: CMakeLists.txt  legged_controllers_plugins.xml
legged_controllers/config/: controllers.yaml
legged_controllers/config/aliengo/: initial_pos.yaml
legged_controllers/config/go1/: joint.yaml
legged_controllers/include/legged_controllers/: BaseController.h  DampingController.h  InitialPosController.h  LeggedController.h  ZeroTorqueController.h
legged_controllers/launch/: load_controller.launch
legged_controllers/src/: BaseController.cpp  DampingController.cpp  InitialPosController.cpp  LeggedController.cpp  ZeroTorqueController.cpp
legged_examples/legged_ros_hw/: CMakeLists.txt  package.xml
legged_examples/legged_ros_hw/config/: default.yaml
legged_examples/legged_ros_hw/include/legged_ros_hw/: RosHW.h
legged_examples/legged_ros_hw/launch/: legged_ros_hw.launch  legged_ros_hw_gazebo.launch
legged_examples/legged_ros_hw/src/: RosHW.cpp  legged_ros_hw.cpp
legged_examples/legged_unitree/legged_unitree_description/config/go1/: joint.yaml
legged_examples/legged_unitree/legged_unitree_description/urdf/common/: gazebo.xacro
robot_gazebo_sim/: CMakeLists.txt  package.xml  robot_gazebo_sim_plugin.xml
robot_gazebo_sim/config/: default.yaml
robot_gazebo_sim/include/robot_gazebo_sim/: robot_gazebo_sim.h
robot_gazebo_sim/launch/: empty_world.launch  joint_control.launch
robot_gazebo_sim/src/: joint_control.cpp  robot_gazebo_sim.cpp
robot_gazebo_sim/worlds/: empty_world.world
