<?xml version="1.0"?>
<package format="2">
    <name>robot_gazebo_sim</name>
    <version>0.0.0</version>
    <description>Gazebo plugin for robot simulation without controller_manager dependency</description>
    <maintainer email="york-fu@outlook.com">yorkfu</maintainer>
    <license>BSD</license>
    <author email="york-fu@outlook.com">yorkfu</author>

    <!-- buildtool_depend: dependencies of the build process -->
    <buildtool_depend>catkin</buildtool_depend>
    <!-- depend: build, export, and execution dependency -->
    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>realtime_tools</depend>
    <depend>gazebo_dev</depend>
    <depend>gazebo_ros</depend>
    <depend>urdf</depend>

    <export>
        <gazebo_ros gazebo_plugin_path="${prefix}/lib"/>
        <gazebo_ros gazebo_model_path="${prefix}"/>
    </export>
</package>
