<?xml version="1.0"?>
<package format="2">
    <name>legged_ros_hw</name>
    <version>0.0.0</version>
    <description>ROS control interface for legged robots via ROS topics</description>
    <maintainer email="york-fu@outlook.com">yorkfu</maintainer>

    <license>BSD</license>
    <author email="york-fu@outlook.com">yorkfu</author>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_clang_tools</build_depend>
    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>realtime_tools</depend>
    <depend>legged_hw</depend>
</package>

